testdata/baselines/reference/submodule/compiler/expandoFunctionContextualTypesJs.errors.txt
input.js(48,1): error TS2309: An export assignment cannot be used in a module with other exported elements.


==== input.js (1 errors) ====
    /** @typedef {{ color: "red" | "blue" }} MyComponentProps */
    
    /**
     * @template P 
     * @typedef {{ (): any; defaultProps?: Partial<P> }} StatelessComponent */
    
     /**
      * @type {StatelessComponent<MyComponentProps>}
      */
    const MyComponent = () => /* @type {any} */(null);
    
    MyComponent.defaultProps = {
        color: "red"
    };
    
    const MyComponent2 = () => null;
    
    /**
     * @type {MyComponentProps}
     */
    MyComponent2.defaultProps = {
        color: "red"
    }
    
    /**
      * @type {StatelessComponent<MyComponentProps>}
     */
    const check = MyComponent2;
    
    /**
     * 
     * @param {{ props: MyComponentProps }} p 
     */
    function expectLiteral(p) {}
    
    function foo() {
        /**
         * @type {MyComponentProps}
         */
        this.props = { color: "red" };
    
        expectLiteral(this);
    }
    
    /**
     * @type {MyComponentProps}
     */
    module.exports = {
    ~~~~~~~~~~~~~~~~~~
        color: "red"
    ~~~~~~~~~~~~~~~~
    }
    ~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    
    expectLiteral({ props: module.exports });
    